# fortvars

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
src/fortvars/: __init__.py  fortran_variables.py
